testdata/baselines/reference/submodule/compiler/declarationEmitHasTypesRefOnNamespaceUse.errors.txt
/src/index.ts(1,22): error TS2503: Cannot find namespace 'NS'.


==== /src/index.ts (1 errors) ====
    class Src implements NS.Dep { }
                         ~~
!!! error TS2503: Cannot find namespace 'NS'.
    
==== /deps/dep/dep.d.ts (0 errors) ====
    declare namespace NS {
        interface Dep {
        }
    }
==== /deps/dep/package.json (0 errors) ====
    {
        "typings": "dep.d.ts"
    }